<resources>
    <string name="app_name">InventoryBuddy</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="login">Login</string>
    <string name="login_description">To access your personal inventory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="login_subtext">Account will be created if none exists.</string>
    <string name="permissions_title">Important</string>
    <string name="permissions_description">To receive a text message when an item in your inventory runs low, allow the permission request appearing on the following screen.</string>
    <string name="next">Next</string>
    <string name="inventorybuddy">InventoryBuddy</string>
    <string name="item_name">Item Name</string>
    <string name="zero">0</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="plus">+</string>
    <string name="button_hint">Click the \'+\' button to add an item.</string>
    <string name="inventory">Inventory</string>
    <string name="edit">Edit</string>
</resources>