<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textName"
        android:textSize="24sp"
        android:text="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textQuantity"
        android:textSize="24sp"
        android:text="@string/zero"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textQuantity"
        />

    <Button
        android:id="@+id/buttonDelete"
        android:text="@string/delete"
        android:contentDescription="@string/delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textQuantity"
        app:layout_constraintBottom_toBottomOf="@id/textQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>
